# airgapped_llm

./: .gitignore  LICENSE  README.md  airgap.code-workspace
.archive/vm/: README.md  get_vm_bundle.sh
.archive/vm/docs/: UTM_ENCRYPTED_DISK.md  UTM_FIX_GUI.md  UTM_IMPORT_GUIDE.md  UTM_LUKS_TIMEOUT.md  decrypt_luks2.sh
airgap/: .gitignore  Cargo.toml  README.md  RUST_CRATES.md  check_quotes.py  create_clonezilla_usb.sh  get_bundle.sh  install_offline.sh  prepare_backup.sh  requirements.txt  requirements.txt.example  restore_network.sh  setup_passwordless_sudo.sh  short_cut_notes.md  uninstall_offline.sh
airgap/..sh/: config
airgap/archive/: copy_models.sh  download_missing.sh
airgap/docs/: AIRGAP_PACKAGES.md  AIRGAP_REVIEW.md  BACKUP_RESTORE.md  MODEL_RECOMMENDATIONS.md  RUN_OLLAMA.md  SYSTEM_LIBRARIES.md
airgap/scripts/: download_extension.py  download_ollama.py  download_python_packages.py  download_rust_toolchain.py  download_vscodium.py  utils.py
backup/: README.md  backup_system.sh  create_backup_usb.sh  identify_disks.sh  restore_system.sh  verify_backup.sh
backup/archive/: backup_vm.sh  restore_vm.sh
kvm/: README.md  convert_utm_to_kvm.sh  migrate_vm.sh  setup_kvm_vm.sh
mac/: README.md  cleanup_mac_vm.sh  setup_mac_vm.sh
mac_vm/: README.md  cleanup_mac_vm.sh
vm/: get_vm_bundle.sh  install_vm.sh
vm/docs/: REMOVE_LUKS_ENCRYPTION.md  UTM_LUKS_BOOT_PARAMS.md  UTM_MAIN_CONSOLE.md  UTM_PASSWORD_TIMING.md  UTM_SPICE_CONSOLE_FIX.md
vm/scripts/: create_vm_image.sh  install_popos_vm.sh
